2005-07-03  Paul Eggert  <eggert@cs.ucla.edu>

	Remove the dependency of the strftime module on the tzset module.
	* strftime.m4 (gl_FUNC_STRFTIME): Don't require gl_FUNC_TZSET_CLOBBER.
	* prereq.m4 (gl_PREREQ): Add gl_FUNC_TZSET_CLOBBER.

2005-07-03  Jim Meyering  <jim@meyering.net>

	* lstat.m4 (gl_FUNC_LSTAT): New file, from gnulib.
	Use AC_LIBSOURCES to require lstat.c and lstat.h.
	Remove obsolete comment.

2005-07-03  Paul Eggert  <eggert@cs.ucla.edu>

	* fts.m4 (gl_FUNC_FTS_CORE): Don't require
	AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK; that's now the lstat
	module's job.
	* jm-macros.m4 (gl_MACROS): Likewise.
	* prereq.m4 (gl_PREREQ): Add gl_FUNC_LSTAT.

2005-07-03  Jim Meyering  <jim@meyering.net>

	* fcntl-safer.m4 (gl_FCNTL_SAFER): Add fcntl--.h to the list.
	* stdio-safer.m4 (gl_STDIO_SAFER): Add stdio--.h to the list.
	* stdlib-safer.m4: (gl_STDLIB_SAFER): Add stdlib--.h to the list.
	* unistd-safer.m4 (gl_UNISTD_SAFER): Add unistd--.h to the list.

2005-07-02  Paul Eggert  <eggert@cs.ucla.edu>

	Cleanup to isolate "safer" functions to a small part of the code.
	* fcntl-safer.m4, fd-reopen.m4, stdlib-safer.m4: New files.
	* prereq.m4 (gl_PREREQ): Require gl_FCNTL_SAFER,
	gl_FD_REOPEN, gl_STDLIB_SAFER.

2005-07-02  Jim Meyering  <jim@meyering.net>

	* check-decl.m4, chown.m4, free.m4, getcwd.m4, link-follow.m4:
	* mktime.m4: Assume HAVE_UNISTD_H, i.e., that <unistd.h> works.

2005-07-01  Jim Meyering  <jim@meyering.net>

	* chown.m4, cloexec.m4, dup2.m4, fsusage.m4, getcwd.m4, jm-macros.m4:
	* mkstemp.m4, mountlist.m4, save-cwd.m4, unistd-safer.m4:
	Don't check for fcntl.h anymore. Now we assume it exists and is usable.

	* getcwd-path-max.m4 (gl_FUNC_GETCWD_PATH_MAX):
	Assume HAVE_FCNTL_H (i.e., include <fcntl.h> unconditionally,
	and don't check for fcntl.h).

2005-06-30  Jim Meyering  <jim@meyering.net>

	* stdopen.m4 (gl_STDOPEN): New file/macro.
	* jm-macros.m4: Require it.

2005-06-26  Jim Meyering  <jim@meyering.net>
